set paths properly

--- a/PropertyNotify/PropertyNotify.csproj
+++ b/PropertyNotify/PropertyNotify.csproj
@@ -31,9 +31,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="LICENSE" Pack="true" PackagePath="" />
-        <None Include="README.md" Pack="true" PackagePath="" />
-        <None Include="icon.png" Pack="true" PackagePath="" />
+        <None Include="../LICENSE" Pack="true" PackagePath="" />
+        <None Include="../README.md" Pack="true" PackagePath="" />
+        <None Include="../icon.png" Pack="true" PackagePath="" />
         <Compile Include="Generator.cs" />
         <Compile Include="NotifyAttribute.cs" />
     </ItemGroup>
