--- a/Tests/tests.csproj
+++ b/Tests/tests.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\PropertyNotify.csproj" />
+        <ProjectReference Include="..\src\PropertyNotify.csproj" />
     </ItemGroup>
 
 </Project>
