--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,6 @@ jobs:
       # - name: Release Build
       #   run: dotnet build --configuration Release --no-restore
       # - name: Pack NuGet package
-      #   run: dotnet pack --configuration Release --no-build --output nupkgs
+      #   run: dotnet pack src/PropertyNotify.csproj --configuration Release --no-build --output nupkgs
       # - name: Push to NuGet.org
       #   run: dotnet nuget push "nupkgs/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
