--- a/src/PropertyNotify.csproj
+++ b/src/PropertyNotify.csproj
@@ -36,9 +36,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="LICENSE" Pack="true" PackagePath="" />
-        <None Include="README.md" Pack="true" PackagePath="" />
-        <None Include="icon.png" Pack="true" PackagePath="" />
+        <None Include="../LICENSE" Pack="true" PackagePath="" />
+        <None Include="../README.md" Pack="true" PackagePath="" />
+        <None Include="../icon.png" Pack="true" PackagePath="" />
         <Compile Include="Generator.cs" />
         <Compile Include="NotifyAttribute.cs" />
     </ItemGroup>
