--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,9 +26,9 @@ jobs:
         run: dotnet build --no-restore
       - name: Test
         run: dotnet test --no-build --verbosity normal
-      # - name: Release Build
-      #   run: dotnet build --configuration Release --no-restore
-      # - name: Pack NuGet package
-      #   run: dotnet pack src/PropertyNotify.csproj --configuration Release --no-build --output nupkgs
-      # - name: Push to NuGet.org
-      #   run: dotnet nuget push "nupkgs/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      - name: Release Build
+        run: dotnet build --configuration Release --no-restore
+      - name: Pack NuGet package
+        run: dotnet pack src/PropertyNotify.csproj --configuration Release --no-build --output nupkgs
+      - name: Push to NuGet.org
+        run: dotnet nuget push "nupkgs/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
