--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,13 +21,13 @@ jobs:
         with:
           dotnet-version: 9.0.x
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore tests/test.csproj
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build tests/test.csproj --no-restore
       - name: Test
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test tests/test.csproj --no-build --verbosity normal
       - name: Release Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build src/PropertyNotify.csproj --configuration Release --no-restore
       - name: Pack NuGet package
         run: dotnet pack src/PropertyNotify.csproj --configuration Release --no-build --output nupkgs
       - name: Push to NuGet.org
