--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           dotnet-version: 9.0.x
       - name: Restore dependencies
-        run: dotnet restore tests/test.csproj
+        run: dotnet restore tests/tests.csproj
       - name: Build
-        run: dotnet build tests/test.csproj --no-restore
+        run: dotnet build tests/tests.csproj --no-restore
       - name: Test
-        run: dotnet test tests/test.csproj --no-build --verbosity normal
+        run: dotnet test tests/tests.csproj --no-build --verbosity normal
       - name: Release Build
         run: dotnet build src/PropertyNotify.csproj --configuration Release --no-restore
       - name: Pack NuGet package
